2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(GConfSource.sync): recursively add all the files
	in the GConf database to the ProfileStorage.
	(GConfSource.apply): copy the GConf database out
	from the ProfileStorage temporary install location.
	
	* lib/sources/filessource.py: fix typo.
	
	* lib/util.py:
	(debug_print): only take a pre-formatted string.
	
	* lib/storage.py:
	(ProfileStorage.delete_file): use list.remove() instead
	of non-existant	list.delete()
	(ProfileStorage.install): change the prefix for the
	temporary dir.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py: add some debugging.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: upd Xnest command line.
	
	* lib/sources/filessource.py: fix typos.
	
	* sabayon.spec.in: don't set the homedir to
	/var/sabayon - we don't use that anymore.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(ProfileChange): kill get_name(), get_type() and
	get_value(). Add get_id() and get_short_description().
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py,
	  lib/sources/paneldelegate.py,
	  lib/sources/testsource.py: impl. new functions.
	
	* admin-tool/monitorwindow.py: update for ProfileChange
	changes.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/monitorwindow.py: change things around
	a bit so that we lose some of the columns in the list
	and the commit menu item. Now everything gets saved
	by default unless you toggle the "ignore" button for
	the change.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: add an about menu item.
	
	* admin-tool/monitorwindow.py: hook up the about
	dialog.
	
	* admin-tool/profilesdialog.py: set the window icon.
	
	* lib/Makefile.am, lib/config.py.in: add VERSION to
	the config.
	
	* lib/usermod.py: add a FIXME.

2005-02-16  Mark McLoughlin  <markmc@redhat.com>
