@@ -25,8 +25,13 @@ PKGDATADIR  = "@PKGDATADIR@"
 PROFILESDIR = "@SYSCONFDIR@/desktop-profiles"
 
 SESSION_TOOL_ARGV = [ "@LIBEXECDIR@/sabayon-session" ]
-MONITOR_TOOL_ARGV = [ "@LIBEXECDIR@/sabayon-monitor" ]
-APPLY_TOOL_ARGV   = [ "@SBINDIR@/sabayon-apply" ]
+#MONITOR_TOOL_ARGV = [ "@LIBEXECDIR@/sabayon-monitor" ]
+MONITOR_TOOL_ARGV = [ "/home/markmc/bin/jhbuild", "-f", "/home/markmc/.jhbuildrc", "run", "@LIBEXECDIR@/sabayon-monitor" ]
+#APPLY_TOOL_ARGV = [ "@LIBEXECDIR@/sabayon-monitor" ]
+APPLY_TOOL_ARGV = [ "/home/markmc/bin/jhbuild", "-f", "/home/markmc/.jhbuildrc", "run", "@SBINDIR@/sabayon-apply" ]
+
+# FIXME: this is too big a hammer
+CLOBBER_USER_PROCESSES_ARGV = [ "/usr/bin/pkill", "-u" ]
 
 #
 # This is the user which we run the prototype sessions
@@ -44,8 +49,8 @@ XNEST_ARGV   = [ "/usr/X11R6/bin/Xnest", "-terminate", "-audit", "0", "-name", "
 SESSION_ARGV = [ "/etc/X11/xdm/Xsession", "gnome" ]
 USERMOD_ARGV = [ "/usr/sbin/usermod" ]
 
-PANEL_KEY_BASE = "/apps/panel"
-# PANEL_KEY_BASE = "/apps/panel/profiles/default"
+# PANEL_KEY_BASE = "/apps/panel"
+PANEL_KEY_BASE = "/apps/panel/profiles/default"
 
 #
 # When starting the prototype session, which environment
